--- a/week-07/day-4/bookstore/public/index.html
+++ b/week-07/day-4/bookstore/public/index.html
@@ -6,6 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bookstore</title>
 </head>
+<form>
+  <h3>Filters</h3>
+  <label for='category'>Category
+    <input type='text' name='category' id='category'>
+  </label>
+  <label for='publisher'>Publisher
+    <input type='text' name='publisher' id='publisher'>
+  </label>
+  </label>
+  <label for='pgt'>Price greater than
+    <input type='text' name='pgt' id='pgt'>
+  </label>
+  <label for='plt'>Price lower than
+    <input type='text' name='plt' id='plt'>
+    <button type='submit'>Filter</button>
+</form>
 
 <body>
   <ul id='list'></ul>
