--- a/reddit/public/index.html
+++ b/reddit/public/index.html
@@ -16,36 +16,7 @@
     <h1 id='pagename'>space</h1>
   </nav>
   <div class='container'>
-    <main>
-      <div id='9' class='postCard'>
-        <div class='postVote'>
-          <div class='upvote'></div>
-          <p class='postScore'>16</p>
-          <div class='downvote'></div>
-        </div>
-        <div class='post'>
-          <a class='postTitleLink' href='http://9gag.com'>Post title</a>
-          <p class='postSubmitted'>submitted 3 hours ago</p>
-          <a class='postLink'>Modify</a>
-          <a class='postLink'>Remove</a>
-        </div>
-      </div>
-
-      <div class='postCard'>
-        <div class='postVote'>
-          <div class='upvote'></div>
-          <p class='postScore'>326</p>
-          <div class='downvote'></div>
-        </div>
-        <div class='post'>
-          <a class='postTitleLink' href='http://9gag.com'>Post title</a>
-          <p class='postSubmitted'>submitted 3 hours ago</p>
-          <a class='postLink'>Modify</a>
-          <a class='postLink'>Remove</a>
-        </div>
-      </div>
-
-    </main>
+    <main></main>
     <aside>
       <button class='btn'>submit a new post</button>
       <div>
@@ -64,6 +35,7 @@
     </aside>
   </div>
   <script src='index.js'></script>
+  <script src='events.js'></script>
 </body>
 
 </html>
