--- a/reddit/public/index.html
+++ b/reddit/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav>
-    <img id='pageicon' src='./assets/redditIcon-space.png' alt='reddit-icon-space'>
+    <a id='pageiconLink' href='./index.html'><img id='pageicon' src='./assets/redditIcon-space.png' alt='reddit-icon-space'></a>
     <h1 id='pagename'>space</h1>
   </nav>
   <div class='container'>
